Pass run config into main entrypoint